2007-10-30  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: Fix "Bug 338018 - 
	  LineCountChanged events fired even when count is 0". Based on patch 
	  by Zach Lute.

2007-10-29  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Make the changes needed to build SourceEditor(1|2)
	  conditionally.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.addin.xml: Bump MD version.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.mdp: Project file names updated by change in MD
	  path functions.

2007-10-23  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: fixed "Bug
	  335270 - Quick Class navigator ignores newly created types".

2007-10-16  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Fixed "Bug
	  331787 - Quick Class navigator does not display nested types".

2007-10-16  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs,
	  MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Fixed "Bug
	  331944 - MD does not keep selected line when file is re-loaded".

2007-10-15  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Fixed "Bug
	  327062 - MD Search (Whole Words Only) is very slow".

2007-10-15  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs: Fixed "Bug 330113 -
	  Clicking a line bookmark crashes md".

2007-10-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Changed calls
	  for the new StringParser.

2007-10-02  Grzegorz Sobański <silk@boktor.net>

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Use the
	  Ambience to render names for class and memebers combos in source 
	  editors.